--- a/app/src/main/res/layout/activity_historique.xml
+++ b/app/src/main/res/layout/activity_historique.xml
@@ -106,9 +106,9 @@
         android:layout_height="0dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="8dp"
         android:background="@color/white"
-        app:layout_constraintBottom_toTopOf="@+id/fabHistorique"
+        app:layout_constraintBottom_toTopOf="@+id/tarifhistoComm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/linearLayout2"
         app:layout_constraintTop_toTopOf="@+id/linearLayout2"
@@ -123,10 +123,10 @@
         android:text="@string/enregistrerCSV"
         android:textSize="@dimen/tailletexteboutoncommande"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
-        app:layout_constraintHorizontal_bias="0.484"
-        app:layout_constraintStart_toStartOf="@+id/linearLayout2"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="@+id/listTriee"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/listTriee"
+        app:layout_constraintTop_toBottomOf="@+id/listTriee"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
@@ -149,8 +149,9 @@
 
     <TextView
         android:id="@+id/textView12"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
         android:padding="10dp"
         android:text="Total"
         android:textAlignment="textEnd"
@@ -158,22 +159,8 @@
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/tarifhistoComm"
         app:layout_constraintEnd_toStartOf="@+id/tarifhistoComm"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/listTriee"
         app:layout_constraintTop_toTopOf="@+id/tarifhistoComm" />
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabHistorique"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
-        android:clickable="true"
-        app:backgroundTint="@color/orangeClub"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/baseline_home_white_18dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
