--- a/app/src/main/res/menu/menu_settings.xml
+++ b/app/src/main/res/menu/menu_settings.xml
@@ -5,6 +5,6 @@
     <item
         android:id="@+id/home"
         android:icon="@drawable/baseline_home_white_18dp"
-        android:title="home"
+        android:title="@string/home"
         app:showAsAction="always" />
 </menu>
