--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -17,7 +17,8 @@
             android:selectAllOnFocus="true"
             android:singleLine="true"
             android:summary="@string/choixpercentage"
-            android:title="Taxes (%)" />
+            android:title="Taxes (%)"
+            />
         <EditTextPreference
             android:defaultValue="Address"
             android:dialogIcon="@android:drawable/ic_dialog_email"
